# kinari

./: .gitignore  README.md  meson.build
include/: boilerplate.hpp  kinari.hpp
src/: boilerplate.cpp  kinari.cpp  main.cpp
src/global/: global.cpp  print.cpp
subprojects/: mozjs-linux-x86_64.wrap
subprojects/mozjs/: meson.build
subprojects/packagefiles/mozjs/: meson.build
